SUBDIRS = icons dbus init initramfs pam themes jail-mount.d face-authentification logon

autostartdir = $(sysconfdir)/xdg/autostart

autostart_DATA = \
    xsplashaa.desktop

xsplashaaconfdir = $(sysconfdir)/xsplashaa

xsplashaaconf_DATA = \
    xsplashaa.conf

EXTRA_DIST = \
    xsplashaa.conf \
    xsplashaa.desktop.in

DISTCLEANFILES = \
    xsplashaa.desktop

