sysdbusconfdir=$(sysconfdir)/dbus-1/system.d/

sysdbusconf_DATA = \
    fr.supersonicimagine.XSAA.Manager.conf

datadbusdir=$(datadir)/dbus-1/system-services

datadbus_DATA = \
    fr.supersonicimagine.XSAA.Manager.service
    
EXTRA_DIST = \
    fr.supersonicimagine.XSAA.Manager.service.in \
    fr.supersonicimagine.XSAA.Manager.conf

DISTCLEANFILES = \
    fr.supersonicimagine.XSAA.Manager.service
