init_SCRIPTS =  \
    splash-functions \
    xsplashaa-functions
    
initddir = $(sysconfdir)/init.d

initd_SCRIPTS =  \
    xsplashaa \
    xsplashaa-phase2 \
    xsplashaa-phase3
    
EXTRA_DIST = \
    splash-functions.in \
    xsplashaa-functions.in \
    xsplashaa.in \
    xsplashaa-phase2.in \
    xsplashaa-phase3.in

DISTCLEANFILES = \
    xsplashaa-functions \
    splash-functions \
    xsplashaa \
    xsplashaa-phase2 \
    xsplashaa-phase3
